--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        
+      <a href=""><img src="../static/Logo-2.svg" alt="" /></a>
+      <nav>
+        <ul>
+          <li><a href="">обо мне</a></li>
+          <li><a href="">навыки</a></li>
+          <li><a href="">проекты</a></li>
+          <li><a href="">свяжитесь со мной</a></li>
+        </ul>
+      </nav>
+      <button>резюме<img src="../static/download.svg" alt="" /></button>
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
