--- a/index.html
+++ b/index.html
@@ -5,30 +5,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
       <div class="header-container">
         <div class="flex-header-wrapper">
-            <a href=""><img src="../static/Logo-2.svg" alt="" /></a>
-        <nav>
-          <ul>
-            <li><a class="header-nav-a-left" href="">about me</a></li>
-            <li><a href="">skills</a></li>
-            <li><a href="">projects</a></li>
-            <li><a class="header-nav-a-right" href="">contact me</a></li>
-          </ul>
-        </nav>
-        <button class="resume-button">resume<img class="resume-button-icon" src="../static/download-2.svg" alt="" /></button>
+          <a href=""><img src="static/Logo-2.svg" alt="" /></a>
+          <nav>
+            <ul>
+              <li><a class="header-nav-a-left" href="">about me</a></li>
+              <li><a href="">skills</a></li>
+              <li><a href="">projects</a></li>
+              <li><a class="header-nav-a-right" href="">contact me</a></li>
+            </ul>
+          </nav>
+          <button class="resume-button">
+            resume<img
+              class="resume-button-icon"
+              src="static/download-2.svg"
+              alt=""
+            />
+          </button>
         </div>
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="container">
+        <h1>hello i’am kate kuragina. frontend developer based in russia.</h1>
+        <p>
+          I'm Kate. Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry. Lorem Ipsum has been the industry's standard
+          dummy text ever since the 1500s, when an unknown printer took a galley
+          of type and scrambled it to specimen book.
+        </p>
+
+        <ul>
+          <li>
+            <button><img src="" alt="" /></button>
+          </li>
+          <li>
+            <button><img src="" alt="" /></button>
+          </li>
+          <li>
+            <button><img src="" alt="" /></button>
+          </li>
+          <li>
+            <button><img src="" alt="" /></button>
+          </li>
+        </ul>
+
+        <img src="static/girl banner 1.svg" alt="" />
+      </section>
+
+      <section class="container">
+        <h1>my skills</h1>
+        <div class="card-flex-wrapper">
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>html</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>css</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>java script</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>react</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+          <div class="card">
+            <img class="card-img" src="" alt="" />
+            <h5>git</h5>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="container" class="black-background">
+        <h1>my experience</h1>
+      </section>
+
+    </main>
 
     <footer></footer>
   </body>
