add button animation

--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <ul class="main-flex-button-wrapper">
               <li>
                 <button class="link-button">
-                  <img src="static/icons8-telegram.svg" alt="" />
+                  <img class="button-icon" src="static/icons8-telegram.svg" alt="" />
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img src="static/icons8-github.svg" alt="" />
+                  <img class="button-icon" src="static/icons8-github.svg" alt="" />
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img src="static/icons8-vk.svg" alt="" />
+                  <img class="button-icon" src="static/icons8-vk.svg" alt="" />
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img src="static/icons8-instagram.svg" alt="" />
+                  <img class="button-icon" src="static/icons8-instagram.svg" alt="" />
                 </button>
               </li>
             </ul>
@@ -87,48 +87,51 @@
         </div>
       </section>
 
+
+
+
       <section class="container">
-        <h1 class="title">my skills</h1>
+        <h1 class="title">my <span class="title-extra-bold">skills</span></h1>
         <div class="card-flex-wrapper">
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>html</h5>
+            <h5 class="card-title">html</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>css</h5>
+            <h5 class="card-title">css</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>java script</h5>
+            <h5 class="card-title">javascript</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>react</h5>
+            <h5 class="card-title">react</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">git</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">typescript</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">scss</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">dom</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">jsx</h5>
           </div>
           <div class="card">
             <img class="card-img" src="" alt="" />
-            <h5>git</h5>
+            <h5 class="card-title">webpack</h5>
           </div>
         </div>
       </section>
