--- a/index.html
+++ b/index.html
@@ -94,43 +94,43 @@
         <h1 class="title">my <span class="title-extra-bold">skills</span></h1>
         <div class="card-flex-wrapper">
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-html.svg" alt="" />
             <h5 class="card-title">html</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-css.svg" alt="" />
             <h5 class="card-title">css</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-js.svg" alt="" />
             <h5 class="card-title">javascript</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-react-native.svg" alt="" />
             <h5 class="card-title">react</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-git.svg" alt="" />
             <h5 class="card-title">git</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-typescript.svg" alt="" />
             <h5 class="card-title">typescript</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
-            <h5 class="card-title">scss</h5>
+            <img class="card-img" src="static/icons8-sass.svg" alt="" />
+            <h5 class="card-title">sass</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-html.svg" alt="" />
             <h5 class="card-title">dom</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-react-native.svg" alt="" />
             <h5 class="card-title">jsx</h5>
           </div>
           <div class="card">
-            <img class="card-img" src="" alt="" />
+            <img class="card-img" src="static/icons8-webpack.svg" alt="" />
             <h5 class="card-title">webpack</h5>
           </div>
         </div>
