my skills section done

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </header>
 
     <main>
+      <!-- main section -->
       <section class="main-container">
         <div class="flex-wrapper">
           <div class="main-info">
@@ -87,19 +88,17 @@
         </div>
       </section>
 
-
-
-
+      <!-- skills section -->
       <section class="container">
-        <h1 class="title">my <span class="title-extra-bold">skills</span></h1>
+        <h1 class="title center-title">my <span class="title-extra-bold">skills</span></h1>
         <div class="card-flex-wrapper">
           <div class="card">
             <img class="card-img" src="static/icons8-html.svg" alt="" />
-            <h5 class="card-title">html</h5>
+            <h5 class="card-title">HTML</h5>
           </div>
           <div class="card">
             <img class="card-img" src="static/icons8-css.svg" alt="" />
-            <h5 class="card-title">css</h5>
+            <h5 class="card-title">CSS</h5>
           </div>
           <div class="card">
             <img class="card-img" src="static/icons8-js.svg" alt="" />
@@ -123,11 +122,11 @@
           </div>
           <div class="card">
             <img class="card-img" src="static/icons8-html.svg" alt="" />
-            <h5 class="card-title">dom</h5>
+            <h5 class="card-title">DOM</h5>
           </div>
           <div class="card">
             <img class="card-img" src="static/icons8-react-native.svg" alt="" />
-            <h5 class="card-title">jsx</h5>
+            <h5 class="card-title">JSX</h5>
           </div>
           <div class="card">
             <img class="card-img" src="static/icons8-webpack.svg" alt="" />
