add black-background and other sections

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
 
       <!-- skills section -->
-      <section class="container">
+      <section class="container black-container-next">
         <h1 class="title center-title">my <span class="title-extra-bold">skills</span></h1>
         <div class="card-flex-wrapper">
           <div class="card">
@@ -135,8 +135,34 @@
         </div>
       </section>
 
+      <!-- experience section -->
+      <section class="black-background">
+        <section class="black-background-container">
+          <h1 class="title white center-title">my <span class="title-extra-bold">experience</span></h1>
+        </section>
+
+      </section>
+
+      <!-- about me section -->
+      <section class="container black-container-before black-container-next">
+        <h1 class="title">about me</h1>
+      </section>
+
+      <!-- my projects section -->
+      <section class="black-background">
+        <section class="black-background-container">
+          <h1 class="title white">my projects</h1>
+        </section>
+      </section>
+
+      <!-- my testimonial section-->
+      <section class="container black-container-before">
+        <h1 class="title">my testimonial</h1>
+      </section>
+
+      <!-- contact section -->
       <section class="container">
-        <h1 class="title">my experience</h1>
+        <h1 class="title">lets tolk for smth special</h1>
       </section>
     </main>
 
