experience section done

--- a/index.html
+++ b/index.html
@@ -45,30 +45,37 @@
           <div class="main-info">
             <div>
               <h1 class="title">
-                hello i’am <span class="title-extra-bold">kate.</span><br /><span
-                  class="title-extra-bold"
-                  >frontend</span
-                >
+                hello i’am <span class="title-extra-bold">kate.</span
+                ><br /><span class="title-extra-bold">frontend</span>
                 <span class="title-outlined-extra-bold">developer</span
                 ><br />based in <span class="title-extra-bold">russia.</span>
               </h1>
               <p class="paragraph" class="main-paragraph">
-                I'm Kate Kuragina Lorem Ipsum is simply dummy text of the printing
-                and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer
-                took a galley of type and scrambled it to specimen book.
+                I'm Kate Kuragina Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an
+                unknown printer took a galley of type and scrambled it to
+                specimen book.
               </p>
             </div>
 
             <ul class="main-flex-button-wrapper">
               <li>
                 <button class="link-button">
-                  <img class="button-icon" src="static/icons8-telegram.svg" alt="" />
+                  <img
+                    class="button-icon"
+                    src="static/icons8-telegram.svg"
+                    alt=""
+                  />
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img class="button-icon" src="static/icons8-github.svg" alt="" />
+                  <img
+                    class="button-icon"
+                    src="static/icons8-github.svg"
+                    alt=""
+                  />
                 </button>
               </li>
               <li>
@@ -78,7 +85,11 @@
               </li>
               <li>
                 <button class="link-button">
-                  <img class="button-icon" src="static/icons8-instagram.svg" alt="" />
+                  <img
+                    class="button-icon"
+                    src="static/icons8-instagram.svg"
+                    alt=""
+                  />
                 </button>
               </li>
             </ul>
@@ -90,7 +101,9 @@
 
       <!-- skills section -->
       <section class="container black-container-next">
-        <h1 class="title center-title">my <span class="title-extra-bold">skills</span></h1>
+        <h1 class="title center-title">
+          my <span class="title-extra-bold">skills</span>
+        </h1>
         <div class="card-flex-wrapper">
           <div class="card">
             <img class="card-img" src="static/icons8-html.svg" alt="" />
@@ -138,9 +151,36 @@
       <!-- experience section -->
       <section class="black-background">
         <section class="black-background-container">
-          <h1 class="title white center-title">my <span class="title-extra-bold">experience</span></h1>
+          <h1 class="title white center-title">
+            my <span class="title-extra-bold">experience</span>
+          </h1>
+          <div class="flex-wrapper experience-flex-wrapper white">
+            <div class="experience-card">
+              <div class="experience-info-flex-wrapper">
+                <img src="static/browser_internet_page_security_web_webpage_website_icon_127036.svg" alt="" />
+                <h4>Websites Development</h4>
+                <p>dec 2023 - present</p>
+              </div>
+              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+            </div>
+            <div class="experience-card">
+              <div class="experience-info-flex-wrapper">
+                <img src="static/swift_original_logo_icon_146332.svg" alt="" />
+                <h4>IOS Applications Development</h4>
+                <p>oct 2022 - may 2024</p>
+              </div>
+              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+            </div>
+            <div class="experience-card">
+              <div class="experience-info-flex-wrapper">
+                <img src="static/10213womanstudentlightskintone_110661.svg" alt="" />
+                <h4>Diploma of Higher Education as a Software Engineer</h4>
+                <p>sep 2020 - jun 2024</p>
+              </div>
+              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+            </div>
+          </div>
         </section>
-
       </section>
 
       <!-- about me section -->
@@ -162,7 +202,7 @@
 
       <!-- contact section -->
       <section class="container">
-        <h1 class="title">lets tolk for smth special</h1>
+        <h1 class="title">lets talk for smth special</h1>
       </section>
     </main>
 
