about me section done

--- a/index.html
+++ b/index.html
@@ -157,11 +157,21 @@
           <div class="flex-wrapper experience-flex-wrapper white">
             <div class="experience-card">
               <div class="experience-info-flex-wrapper">
-                <img src="static/browser_internet_page_security_web_webpage_website_icon_127036.svg" alt="" />
+                <img
+                  src="static/browser_internet_page_security_web_webpage_website_icon_127036.svg"
+                  alt=""
+                />
                 <h4>Websites Development</h4>
                 <p>dec 2023 - present</p>
               </div>
-              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+              <p class="paragraph">
+                As a Senior Software Engineer at Google, I played a pivotal role
+                in developing innovative solutions for Google's core search
+                algorithms. Collaborating with a dynamic team of engineers, I
+                contributed to the enhancement of search accuracy and
+                efficiency, optimizing user experiences for millions of users
+                worldwide.
+              </p>
             </div>
             <div class="experience-card">
               <div class="experience-info-flex-wrapper">
@@ -169,15 +179,32 @@
                 <h4>IOS Applications Development</h4>
                 <p>oct 2022 - may 2024</p>
               </div>
-              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+              <p class="paragraph">
+                As a Senior Software Engineer at Google, I played a pivotal role
+                in developing innovative solutions for Google's core search
+                algorithms. Collaborating with a dynamic team of engineers, I
+                contributed to the enhancement of search accuracy and
+                efficiency, optimizing user experiences for millions of users
+                worldwide.
+              </p>
             </div>
             <div class="experience-card">
               <div class="experience-info-flex-wrapper">
-                <img src="static/10213womanstudentlightskintone_110661.svg" alt="" />
+                <img
+                  src="static/10213womanstudentlightskintone_110661.svg"
+                  alt=""
+                />
                 <h4>Diploma of Higher Education as a Software Engineer</h4>
                 <p>sep 2020 - jun 2024</p>
               </div>
-              <p>As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
+              <p class="paragraph">
+                As a Senior Software Engineer at Google, I played a pivotal role
+                in developing innovative solutions for Google's core search
+                algorithms. Collaborating with a dynamic team of engineers, I
+                contributed to the enhancement of search accuracy and
+                efficiency, optimizing user experiences for millions of users
+                worldwide.
+              </p>
             </div>
           </div>
         </section>
@@ -185,7 +212,39 @@
 
       <!-- about me section -->
       <section class="container black-container-before black-container-next">
-        <h1 class="title">about me</h1>
+        <div class="flex-wrapper">
+          <img src="static/Group 1000015859.svg" alt="" />
+          <div class="about-me-info-flex-wrapper">
+            <h1 class="title">
+              about <span class="title-extra-bold">me</span>
+            </h1>
+            <div>
+              <p class="paragraph">
+                I'm a passionate, self-proclaimed designer who specializes in full
+                stack development (React.js & Node.js). I am very enthusiastic
+                about bringing the technical and visual aspects of digital
+                products to life. User experience, pixel perfect design, and
+                writing clear, readable, highly performant code matters to me.
+              </p>
+              <p class="paragraph">
+                I began my journey as a web developer in 2015, and since then,
+                I've continued to grow and evolve as a developer, taking on new
+                challenges and learning the latest technologies along the way.
+                Now, in my early thirties, 7 years after starting my web
+                development journey, I'm building cutting-edge web applications
+                using modern technologies such as Next.js, TypeScript, Nestjs,
+                Tailwindcss, Supabase and much more.
+              </p>
+              <p class="paragraph">
+                When I'm not in full-on developer mode, you can find me hovering
+                around on twitter or on indie hacker, witnessing the journey of
+                early startups or enjoying some free time. You can follow me on
+                Twitter where I share tech-related bites and build in public, or
+                you can follow me on GitHub.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- my projects section -->
