fix header and main section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <a href=""><img src="static/Logo-2.svg" alt="" /></a>
           <nav>
             <ul>
-              <li><a class="header-nav-a-left" href="">about me</a></li>
+              <li><a href="">about me</a></li>
               <li><a href="">skills</a></li>
               <li><a href="">projects</a></li>
-              <li><a class="header-nav-a-right" href="">contact me</a></li>
+              <li><a href="">contact me</a></li>
             </ul>
           </nav>
           <button class="header-resume-button">
@@ -40,9 +40,9 @@
 
     <main>
       <!-- main section -->
-      <section class="main-container">
+      <section class="container main-container">
         <div class="flex-wrapper">
-          <div class="main-info">
+          <div class="main-info-flex-wrapper">
             <div>
               <h1 class="title">
                 hello i’am <span class="title-extra-bold">kate.</span
@@ -59,7 +59,7 @@
               </p>
             </div>
 
-            <ul class="main-flex-button-wrapper">
+            <ul class="main-button-flex-wrapper">
               <li>
                 <button class="link-button">
                   <img
